added trello like board

--- a/app/views/expenditures/comments.html.erb
+++ b/app/views/expenditures/comments.html.erb
@@ -1,3 +1,4 @@
 <%= render 'shared/side-nav' %>
 <%= render 'shared/tabs', section: :expenditures %>
+<%= render 'shared/comments', report: @report, comment: @comment %>
 
