--- a/app/views/treasuries/comments.html.erb
+++ b/app/views/treasuries/comments.html.erb
@@ -1,2 +1,3 @@
 <%= render 'shared/side-nav' %>
 <%= render 'shared/tabs', section: :treasury %>
+<%= render 'shared/comments', report: @report, comment: @comment %>
