--- a/app/views/sales/transactions.html.erb
+++ b/app/views/sales/transactions.html.erb
@@ -19,8 +19,8 @@
     </div>
   </div>
 
-   <div class="col-12">
-    <div class="card-dash-bis">
+    <div class="col-12">
+      <div class="card-dash-bis">
         <div class="top-table">
 
           <div class="top-table-row table-row">
@@ -42,12 +42,11 @@
               <% end %>
             </div>
           <% end %>
-
         </div>
+      </div>
     </div>
-
   </div>
-
 </div>
+
 
 
