--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -1,58 +1,60 @@
 <%= render 'shared/side-nav' %>
 <%= render 'shared/tabs', section: :expenditures %>
+
 <div class="container-decidesk">
 
-
-<div class="container-index">
+  <div class="container-index">
     <div class="row">
       <div class="col-12 d-flex justify-content-start">
         <div class="d-flex flex-column" style="max-width: 100%">
           <div class="d-flex justify-content-between" style="margin-bottom: -50px; margin-top: -30px">
 
-            <div class="card-dash-bis p-4 text-start" style="min-width: 70%; color: grey">
-            <h4 style="font-size: 1rem">Total Expenditures</h4>
-            <h2 style="font-size: 2rem; color: red"> <strong> € <%= number_with_delimiter(@total_expenditures, :delimiter => ',') %></strong></h2>
-            <!-- <p class="m-0">6% higher than sales</p> -->
-          </div>
+              <div class="card-dash-bis p-4 text-start" style="min-width: 70%; color: grey">
+                <h4 style="font-size: 1rem">Total Expenditures</h4>
+                <h2 style="font-size: 2rem; color: red"> <strong> € <%= number_with_delimiter(@total_expenditures, :delimiter => ',') %></strong></h2>
+              </div>
 
-          <div class="card-dash-bis p-4 text-start" style="min-width: 60%; color: grey">
-            <h4 style="font-size: 1rem">Total Sales</h4>
-            <h2 style="font-size: 2rem"> <strong class="highlight text-center"> € <%= number_with_delimiter(@total_sales, :delimiter => ',') %></strong></h2>
-<!--             <p class="m-0">6% lower than expenditures</p> -->
+              <div class="card-dash-bis p-4 text-start" style="min-width: 60%; color: grey">
+                <h4 style="font-size: 1rem">Total Sales</h4>
+                <h2 style="font-size: 2rem"> <strong class="highlight text-center"> € <%= number_with_delimiter(@total_sales, :delimiter => ',') %></strong></h2>
+              </div>
           </div>
         </div>
       </div>
-    </div>
-
 
       <div class="col-12">
         <div class="card-dash-bis">
-          <h3>Monthly Expenditures</h3>
+          <div class="d-flex justify-content-between" style="margin-bottom: 20px">
+            <h3>Monthly Expenditures</h3>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+          </div>
           <br>
             <%= column_chart @report.lines.annual_expenditures, prefix: "€", thousands: ",", download: true, colors: ["#04C586", "#04C586"] %>
         </div>
-
       </div>
-
     </div>
 
 
     <div class="row">
       <div class="col-5">
         <div class="card-dash-bis">
-          <h3>Expenditures per category</h3>
+          <div class="d-flex justify-content-between" style="margin-bottom: 20px">
+            <h3>Expenditures per category</h3>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+          </div>
           <br>
-          <%= pie_chart Line.top_expenditures_subcategory, prefix: "€", thousands: ",", download: true, donut: true, legend: "bottom" %>
+          <%= pie_chart Line.top_expenditures_subcategory, prefix: "€", thousands: ",", download: true, donut: true, legend: false %>
         </div>
-
       </div>
 
       <div class="col-7">
         <div class="card-dash-bis">
+           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
+            <h3>Top 5 expenditures this year</h3>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+           </div>
 
-          <h3 style="margin-bottom: 30px">Top 5 expenditures this year</h3>
           <div class="top-table">
-
             <div class="top-table-row table-row">
               <div class="table-number">No.</div>
               <div class="table-exp">Expenditure</div>
@@ -67,17 +69,14 @@
                 <div class="table-date"><%= line.ecriture_date%></div>
                 <div class="table-amount">€ <%= number_with_delimiter(line.debit.round(0), :delimiter => ',') %></div>
               </div>
-
             <% end %>
-
           </div>
 
           <div class="text-center"><%= link_to "Show more", report_expenditures_transactions_path(@report), class: "btn btn-bleu" %></div>
+
         </div>
       </div>
-
     </div>
-
   </div>
 </div>
 
