--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -2,8 +2,7 @@
 <%= render 'shared/tabs', section: :treasury %>
 <div class="container-decidesk">
 
-
-<div class="container-index">
+  <div class="container-index">
     <div class="row">
       <div class="col-12 d-flex justify-content-start">
         <div class="d-flex flex-column" style="max-width: 100%">
@@ -15,34 +14,33 @@
             </div>
 
             <div class="card-dash-bis p-4 text-start" style="min-width: 70%; color: grey">
-            <h4 style="font-size: 1rem">Total Cashout</h4>
-            <h2 style="font-size: 2rem; color: red"> <strong> € <%= number_with_delimiter(@cash_out.to_i, :delimiter => ',') %></strong></h2>
+              <h4 style="font-size: 1rem">Total Cashout</h4>
+              <h2 style="font-size: 2rem; color: red"> <strong> € <%= number_with_delimiter(@cash_out.to_i, :delimiter => ',') %></strong></h2>
+            </div>
           </div>
-
-
         </div>
       </div>
-    </div>
 
-    <div class="col-12">
+      <div class="col-12">
         <div class="card-dash-bis">
-          <h3>Monthly Cash</h3>
-          <br>
+          <div class="d-flex justify-content-between" style="margin-bottom: 45px">
+            <h3>Monthly Cash</h3>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+          </div>
             <%= column_chart @treasuries.monthly_cash, prefix: "€", thousands: ",", download: true, colors: ["#04C586", "#04C586"] %>
         </div>
-
       </div>
-
     </div>
 
-     <div class="row">
-
+    <div class="row">
       <div class="col-6">
         <div class="card-dash-bis">
+          <div class="d-flex justify-content-between" style="margin-bottom: 20px">
+            <h3>Top 5 cashin items this year</h3>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+          </div>
 
-          <h3 style="margin-bottom: 30px">Top 5 cashin items this year</h3>
           <div class="top-table">
-
             <div class="top-table-row table-row">
               <div class="table-number">No.</div>
               <div class="table-exp">Item</div>
@@ -57,9 +55,7 @@
                 <div class="table-date"><%= line.ecriture_date%></div>
                 <div class="table-amount-tr">€ <%= number_with_delimiter(line.debit.round(0), :delimiter => ',') %></div>
               </div>
-
             <% end %>
-
           </div>
 
           <div class="text-center"><%= link_to "Show more", report_treasury_transactions_path(@report), class: "btn btn-bleu" %></div>
@@ -68,10 +64,12 @@
 
       <div class="col-6">
         <div class="card-dash-bis">
+          <div class="d-flex justify-content-between" style="margin-bottom: 20px">
+            <h3>Top 5 cashout items this year</h3>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+          </div>
 
-          <h3 style="margin-bottom: 30px">Top 5 cashout items this year</h3>
           <div class="top-table">
-
             <div class="top-table-row table-row">
               <div class="table-number">No.</div>
               <div class="table-exp">Item</div>
@@ -86,16 +84,12 @@
                 <div class="table-date"><%= line.ecriture_date%></div>
                 <div class="table-amount-tr" style="color: red">- € <%= number_with_delimiter(line.credit.round(0), :delimiter => ',') %></div>
               </div>
-
             <% end %>
-
           </div>
 
           <div class="text-center"><%= link_to "Show more", report_treasury_transactions_path(@report), class: "btn btn-bleu" %></div>
         </div>
       </div>
-
     </div>
-
   </div>
 </div>
