--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
       <div class="col">
         <h1> We help you to identify <strong class="highlight">business opportunities</strong> out of <strong>conformity constraints</strong>.</h1>
         <p>Import, analyse, decide !</p>
-        <a class="btn-flat" href="#">Discover</a>
+        <a class="btn-flat" href="/users/sign_in">Get Started</a>
       </div>
       <div class="col banner-img">
         <svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 763.056 458">
