--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,11 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li><%= link_to "My Dashboard", reports_path, class: "nav-item" %></li>
-        <li class="nav-item active"><%= current_user.email %></li>
+        <% if current_user.business? %>
+          <li class="nav-item active"><%= current_user.business %></li>
+        <% else %>
+          <li class="nav-item active"><%= current_user.email %></li>
+        <% end %>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
