--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -39,7 +39,7 @@
                 <i class="fas fa-search search" data-toggle="tooltip" data-placement="top" title="See more"></i>
               <% end %>
               </h4>
-              <h1 class="text-center"><strong class="text-info"><%= number_with_delimiter(@treasury_balance.to_i, :delimiter => ',') %> € </strong></h1>
+              <h1 class="text-center"> <strong class="text-info"> € <%= number_with_delimiter(@treasury_balance.to_i, :delimiter => ',') %> </strong></h1>
             </div>
   
             <div class="col text-center">
@@ -48,7 +48,7 @@
                 <i class="fas fa-search search" data-toggle="tooltip" data-placement="top" title="See more"></i>
               <% end %>
               </h4>            
-              <h1 class="text-center"> <strong class="highlight"><%= number_with_delimiter(@total_sales.to_i, :delimiter => ',') %> € </strong></h1>
+              <h1 class="text-center"> <strong class="highlight"> € <%= number_with_delimiter(@total_sales.to_i, :delimiter => ',') %></strong></h1>
             </div>          
   
             <div class="col text-center mb-4">
@@ -57,7 +57,7 @@
                 <i class="fas fa-search search" data-toggle="tooltip" data-placement="top" title="See more"></i>
               <% end %>
               </h4>                 
-              <h1 class="text-center"> <strong class="text-primary"> <%= number_with_delimiter(@total_expenditures.to_i, :delimiter => ',') %> € </strong></h1>
+              <h1 class="text-center"> <strong class="text-primary"> € <%= number_with_delimiter(@total_expenditures.to_i, :delimiter => ',') %></strong></h1>
             </div>
 
           </div>
