--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -51,7 +51,7 @@
         <div class="card-dash-bis">
            <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Top 5 expenditures this year</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hey big spender ! You want to make sure to keep control of your big outlays !"></i>
            </div>
 
           <div class="top-table">
