--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -39,7 +39,7 @@
         <div class="card-dash-bis">
           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Monthly Sales Volume</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Make sure to check the monthly variations in sales volume, this could indicates seasonality in your business !"></i>
           </div>
           <%= bar_chart @sales_volume, download: true, colors: ["#1B21B6", "#1B21B6"]%>
         </div>
