--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,8 @@
                   required: true %>
       <%= f.input :photo, as: :file,
                   required: true %>
+      <%= f.input :logo, as: :file,
+                  required: true %>                   
       <%= f.input :password_confirmation,
                   required: false,
                   input_html: { autocomplete: "new-password" } %>
