--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,6 +53,8 @@
                         required: true %>
             <%= f.input :photo, as: :file,
                         required: true %>
+            <%= f.input :logo, as: :file,
+                        required: true %>                        
             <%= f.input :password,
                         required: true,
                         hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
