--- a/app/views/shared/_side-nav.html.erb
+++ b/app/views/shared/_side-nav.html.erb
@@ -1,6 +1,6 @@
 <div class="sidenav">
   <div class="flex-container">
-    <%= link_to reports_path, class: "text-muted" do %>
+    <%= link_to root_path, class: "text-muted" do %>
       <%= image_tag "logo-white.png" %>
     <% end %>
     <div class="dd-title">Decidesk</div>
