--- a/app/views/sales/transactions.html.erb
+++ b/app/views/sales/transactions.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container-decidesk">
 
-  <h3 class="text-center" style= "margin-top: 100px; margin-bottom: 30px">All sales transactions 👎</h3>
+  <h3 class="text-center" style= "margin-top: 100px; margin-bottom: 30px">All sales transactions 🥳</h3>
 
   <div class="container">
     <div class="container-equal-margin mb-4 p-0">
