--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -6,7 +6,7 @@
       <div class="col-lg-4">
         <div class="card-dash">
           <h3 class="main-title"><strong class="highlight">👋 Welcome to Decidesk !</strong></h3>
-          <p>Tired of Excel? Need to quickly understand your business? Well you've come to the right place. Load your FEC file and let's get this party started!</p>
+          <p style="text-align: justify">Tired of Excel? Need to quickly understand your business? Well you've come to the right place. Load your FEC file and let's get this party started!</p>
 
           <br>
           <div class="dropdown-divider"></div>
