--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -2,10 +2,15 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1EDD88;
+  background: $green;
   transition: background 0.3s ease;
   margin-top: 12px;
-  text-decoration: none;
+}
+
+.btn-flat:hover {
+  background: $blue;
+  color: $green;
+  border: solid 1px white;
 }
 
 .btn-flat-search{
@@ -13,15 +18,11 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1EDD88;
+  background: $green;
   transition: background 0.3s ease;
   margin-top: 12px;
 }
 
-.btn-flat:hover {
-  background: #1BCB7F;
-  color: white;
-}
 
 .btn-nav {
   color: #1F008C;
