--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,11 @@
   font-weight: bold;
 }
 
+
+.banner a {
+text-decoration: none;
+}
+
 .banner p {
   font-size: 20px;
   color: white;
@@ -46,8 +51,8 @@
   transform: skewY(2deg);
   -ms-transform: skewY(2deg);
   -webkit-transform: skewY(2deg);
-  margin-bottom: 40px;
-  margin-top: 40px;
+  margin-bottom: 0px;
+  margin-top: 80px;
 }
 
 .fec-presentation-title {
