--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
       <div class="col">
         <h1> We help you to identify <strong class="highlight">business opportunities</strong> out of <strong>conformity constraints</strong>.</h1>
         <p>Import, analyse, decide !</p>
-        <a class="btn-flat" href="/users/sign_in">Get Started</a>
+        <a class="btn btn-flat" href="<%=  reports_path %>">Get Started</a>
       </div>
       <div class="col banner-img">
         <svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 763.056 458">
@@ -59,7 +59,7 @@
 </div>
 
 <div class="container mb-5">
-  <div class="row align-items-center mb-5">
+  <div class="row align-items-center">
     <div class="col-3">
       <div class="text-center mt-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" viewBox="0 0 942.544 631.44">
@@ -354,13 +354,13 @@
 </div>
 
 
-<div class="fec-presentation mt-4">
+<div class="fec-presentation">
   <div class="fec-presentation-title">
     <div class="title-presentation mb-4">
     <h2>More than <strong class="highlight">+12 000</strong> FEC Analysed !</h2>
     </div>
 
-    <div class="row m-2">
+    <div class="row m-2 pd-4">
       <div class="col-2">
         <h4>Startups</h4>
       </div>
@@ -410,10 +410,10 @@
 
 <div>
   <div class="title ">
-    <h1>Don't wait and ask for a demo !</h1>
+    <h1>Let's get started !</h1>
   </div>
   <center>
-  <a class="btn btn-bleu" href="#">Ask for a demo now</a>
+    <a class="btn btn-bleu" href="<%= reports_path %>">Go to your dashboard 🖥️ </a>
   </center>
 </div>
 
