--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li><%= link_to "My Dashboard", reports_path, class: "nav-item" %></li>
+        <li class="nav-item" id="dash-tab"><%= link_to "My Dashboard", reports_path %></li>
         <% if current_user.business? %>
           <li class="nav-item"><%= current_user.business %></li>
         <% else %>
