--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -2,7 +2,7 @@
   <div></div>
   <%= form_for @report, html: {class: "d-flex flex-column"} do |f| %>
       <%= f.text_field :name, required: true, placeholder: "Please give a name to your report" %>
-      <%= f.file_field :csv_file, required: true, class: "mt-3" %>
+      <%= f.file_field :csv_file, required: true, label: "Choose file", class: "mt-3" %>
       <%= f.button 'Send', class: 'btn-bleu mt-3 mw', data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Loading"} %>
   <% end %>
 </div>
