--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,6 +31,10 @@
   text-decoration: none;
 }
 
+.nav-item a {
+  text-decoration: none;
+}
+
 #dash-tab a {
   color: $light-gray;
   text-decoration: none;
