--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -66,3 +66,11 @@
   background: #1BCB7F;
   color: white;
 }
+
+.file-input{
+  margin-top: 10px;
+  padding: 8px 24px;
+  border-radius: 4px;
+  cursor: pointer;
+  background: lightgray;
+}
