--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,9 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
-        <h1> We help you to identify <strong class="highlight">business opportunities</strong> out of <strong>conformity constraints</strong>.</h1>
-        <p>Import, analyse, decide !</p>
+        <h1> Translate complex data into <strong class="highlight"> opportunities</strong> with <strong> just one click</strong></h1>
+        <p><span id="banner-typed-text"></span></p>
+        <!-- <p>Import, analyse, decide !</p> -->
         <a class="btn btn-flat" href="<%=  reports_path %>">Get Started</a>
       </div>
       <div class="col banner-img">
@@ -55,7 +56,7 @@
 </div>
 
 <div class="title">
-  <h1>Why decidesk ?</h1>
+  <h1>Why DeciDesk ?</h1>
 </div>
 
 <div class="container mb-5">
@@ -368,7 +369,7 @@
         <h4>Retail</h4>
       </div>
       <div class="col-2">
-        <h4>Café</h4>
+        <h4>Hospitality</h4>
       </div>
       <div class="col-2">
         <h4>Freelance</h4>
@@ -391,13 +392,13 @@
   <div class="cards">
     <div class="card">
       <img src="" alt="">
-      <h4><strong class="highlight">1 - Get a Fec</strong></h4>
+      <h4><strong class="highlight">1 - Get your FEC</strong></h4>
       <p>Download a FEC from your accounting software or ask your accountant ! </p>
     </div>
     <div class="card">
       <img src="" alt="">
-      <h4><strong class="highlight">2 - Upload it on DeciDesk</strong></h4>
-      <p>Upload the file on your DeciDesck account !</p>
+      <h4><strong class="highlight">2 - Upload it to DeciDesk</strong></h4>
+      <p>Upload the file to your DeciDesck account !</p>
     </div>
     <div class="card">
       <img src="" alt="">
