--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,8 +1,15 @@
  <div class="mt-5">
-  <div></div>
+  <div>
   <%= form_for @report, html: {class: "d-flex flex-column"} do |f| %>
       <%= f.text_field :name, required: true, placeholder: "Please give a name to your report" %>
-      <%= f.file_field :csv_file, required: true, label: "Choose file", class: "mt-3" %>
+      <div>
+        <label class="file-input"for="report_csv_file">
+        <span> Choose your file </span>
+        </label>
+        <span class="file-name"></span>
+        <%= f.file_field :csv_file, required: true, class: "mt-3", style: "display:none;" %>
+      </div>
       <%= f.button 'Send', class: 'btn-bleu mt-3 mw', data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Loading"} %>
   <% end %>
 </div>
+
