--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,7 +1,7 @@
  <div class="mt-5">
   <div>
   <%= form_for @report, html: {class: "d-flex flex-column"} do |f| %>
-      <%= f.text_field :name, required: true, placeholder: "Please give a name to your report" %>
+      <%= f.text_field :name, required: true, placeholder: "Please give your report a name" %>
       <div>
         <label class="file-input"for="report_csv_file">
         <span> Choose your file </span>
