--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -45,7 +45,7 @@
 }
 
 .card:hover{
-  border: 1.5px solid $green;
+  border: 1.5px solid $blue;
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
 }
