--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -361,23 +361,20 @@
     </div>
 
     <div class="row m-2 pd-4">
-      <div class="col-2">
-        <h4>Startups</h4>
+      <div class="col">
+        <h4 class="text-center">Startups</h4>
       </div>
-      <div class="col-2">
-        <h4>Retail</h4>
+      <div class="col">
+        <h4 class="text-center">Retail</h4>
       </div>
-      <div class="col-2">
-        <h4>Café</h4>
+      <div class="col">
+        <h4 class="text-center">Organic shop in Paris</h4>
       </div>
-      <div class="col-2">
-        <h4>Freelance</h4>
+      <div class="col">
+        <h4 class="text-center">Freelance</h4>
       </div>
-      <div class="col-2">
-        <h4>Lawyers</h4>
-      </div>
-      <div class="col-2">
-        <h4>Business owners</h4>
+      <div class="col">
+        <h4 class="text-center">Lawyers</h4>
       </div>
     </div>
   </div>
