--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -357,7 +357,7 @@
 
 <div class="fec-presentation">
   <div class="fec-presentation-title">
-    <div class="title-presentation mb-4">
+    <div class="title-presentation mb-5">
     <h2>More than <strong class="highlight">+12 000</strong> FEC Analysed !</h2>
     </div>
 
@@ -365,16 +365,14 @@
       <div class="col">
         <h4 class="text-center">Startups</h4>
       </div>
-<<<<<<< HEAD
       <div class="col">
         <h4 class="text-center">Retail</h4>
-=======
-      <div class="col-2">
-        <h4>Hospitality</h4>
->>>>>>> 50812338ad7e71a72ad03c3f48535af79822b302
       </div>
       <div class="col">
-        <h4 class="text-center">Organic shop in Paris</h4>
+        <h4 class="text-center">Hospitality</h4>
+      </div>
+      <div class="col">
+        <h4 class="text-center">Organic shops</h4>
       </div>
       <div class="col">
         <h4 class="text-center">Freelance</h4>
