--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,6 +1,6 @@
 <div class="container-decidesk">
   <div class="container-index">
-    <div class="row sortable">
+    <div class="row sortable vh-70">
       <div class="col-4 comments-main">
         <h3>To Do</h3>
         <div class="add-task">
