--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,11 +11,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item" id="dash-tab"><%= link_to "My Dashboard", reports_path %></li>
+        <li class="nav-item pt-10" id="dash-tab"><%= link_to "My Dashboard", reports_path %></li>
         <% if current_user.business? %>
-          <li class="nav-item"><%= current_user.business %></li>
+          <li class="nav-item pt-10"><%= current_user.business %></li>
         <% else %>
-          <li class="nav-item"><%= current_user.email %></li>
+          <li class="nav-item pt-10"><%= current_user.email %></li>
         <% end %>
         <li class="nav-item dropdown">
           <% if current_user.photo.attached? %>
