fix height index report

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -25,7 +25,7 @@
       </div>
 
       <div class="col">
-        <div class="card-dash">
+        <div class="card-dash h-523">
           <h3 class="text-center"><strong class="highlight">Upload a new FEC for analysis</strong></h3>
           <div>
             <%= render 'reports/form' %>
