some small changes on front

--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -101,6 +101,7 @@ table {
       font-weight: 900;
       font-size: 16px;
       color: $blue;
+      text-align: right;
     }
 
     .table-amount-tr {
