--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -26,7 +26,7 @@
         <div class="card-dash-bis">
           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Monthly Sales</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Your monthly sales speak tons about your business! Business has been picking about in the last few months, but you should try to boost sales in beginning of the year!"></i>
           </div>
           <br>
         <%= column_chart @annual_sales, prefix: "€", thousands: ",", download: true, colors: ["#04C586", "#04C586"] %>
@@ -49,7 +49,7 @@
         <div class="card-dash-bis">
           <div class="d-flex justify-content-between" style="margin-bottom: 20px">
             <h3>Top 5 sales this year</h3>
-            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="Hello!"></i>
+            <i class="far fa-info-circle color-black font-weight-bold" data-toggle="tooltip" data-placement="top" title="These are your top sales this year! Keep it up and make sure you take good care of these VIP customers."></i>
           </div>
 
           <div class="top-table">
